Changed css a bit, shifted button, added shadows and fixed a bug i thought i fixed but i dint

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -939,6 +939,11 @@ section {
   transition: 0.3s;
   margin-right: 10px;
 }
+/*me*/
+.contact .button{
+  box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
+    
+}
 
 .contact .info .social-links a:hover {
   background: #149ddd;
@@ -946,7 +951,7 @@ section {
 }
 
 .contact .info .email:hover i,
-.contact .info .address:hover i,
+.contact .info .discord:hover i,
 .contact .info .phone:hover i {
   background: #149ddd;
   color: #fff;
